sand-macros/tests/cases/fail_with_params.stderr
error: #[function] functions must take no parameters
 --> tests/cases/fail_with_params.rs:4:10
  |
4 | fn greet(name: &str) {
  |          ^^^^^^^^^^
