sand-macros/tests/cases/fail_with_params.rs
use sand_macros::function;

#[function]
fn greet(name: &str) {
    mcfunction! {
        "say hello";
    }
}

fn main() {}
